--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,24 +2,26 @@ project:
   type: website
   output-dir: _site
   render:
-    - "index.qmd"
-    - "last_hour.qmd"
-    - "day_summary.qmd"
-    - "week_summary.qmd"
-    - "stats.qmd"
+    - index.qmd
+    - last_hour.qmd
+    - day_summary.qmd
+    - week_summary.qmd
+    - stats.qmd
 
 website:
   title: "BirdNET Observations"
   navbar:
     left:
+      - text: "Home"
+        file: index.qmd
       - text: "Last Hour"
-        file: last_hour.html
+        file: last_hour.qmd
       - text: "Day Summary"
-        file: day_summary.html
+        file: day_summary.qmd
       - text: "Week Summary"
-        file: week_summary.html
+        file: week_summary.qmd
       - text: "Stats"
-        file: stats.html
+        file: stats.qmd
 
 format:
   html:
