--- a/.github/workflows/quarto_publish.yml
+++ b/.github/workflows/quarto_publish.yml
@@ -1,36 +1,40 @@
-name: Quarto Publish
-
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: main
+  workflow_run:
+      workflows: [Update visibility]
+      types:
+        - completed
+
+name: Render and Publish
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v2 
 
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - name: Install Python dependencies
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          # To install LaTeX to build PDF book 
+          tinytex: true 
+          # uncomment below and fill to pin a version
+          # version: 0.9.600
+      
+      # add software dependencies here
         run: |
           pip install -r requirements.txt || true
 
-      - name: Setup Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-
-      - name: Render Quarto site
-        run: quarto render
-
-      - name: Publish to GitHub Pages
+      - name: Publish to GitHub Pages (and render)
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
